--- a/src/pages/[...locale]/portfolio/index.astro
+++ b/src/pages/[...locale]/portfolio/index.astro
@@ -6,7 +6,12 @@ import { getLocaleFromUrl, useTranslations } from "../../../utils/i18n/utils";
 import {
   projectMagicWords,
   projectMidotPowerKids,
-  projectMillyCohenTales
+  projectMillyCohenTales,
+  projectTheViolaJourney,
+  projectIntorahsante,
+  projectNitzaStorytime,
+  projectHelloAPI,
+  projectIxkik
 } from "../../../utils/content/projects";
 
 import Layout from "../../../layouts/Layout.astro";
@@ -23,6 +28,11 @@ const description = t('portfolio.index.description');
 const magicWords = projectMagicWords({ locale });
 const midotPowerKids = projectMidotPowerKids({ locale });
 const millyCohenTales = projectMillyCohenTales({ locale });
+const theViolaJourney = projectTheViolaJourney({ locale });
+const intorahsante = projectIntorahsante({ locale });
+const nitzaStorytime = projectNitzaStorytime({ locale });
+const helloAPI = projectHelloAPI({ locale });
+const ixkik = projectIxkik({ locale });
 
 export { getStaticPaths };
 ---
@@ -80,23 +90,33 @@ export { getStaticPaths };
         </li>
         <li>
           <ProjectCard
-            imageSrc={midotPowerKids.imageSrc}
-            name={midotPowerKids.name}
-            summary={midotPowerKids.summary}
-            year={midotPowerKids.year}
-            client={midotPowerKids.client}
-            projectUrl={midotPowerKids.projectUrl}
-            videoUrl={midotPowerKids.videoUrl} />
+            imageSrc={theViolaJourney.imageSrc}
+            name={theViolaJourney.name}
+            summary={theViolaJourney.summary}
+            year={theViolaJourney.year}
+            client={theViolaJourney.client}
+            projectUrl={theViolaJourney.projectUrl}
+            videoUrl={theViolaJourney.videoUrl} />
         </li>
         <li>
           <ProjectCard
-            imageSrc={midotPowerKids.imageSrc}
-            name={midotPowerKids.name}
-            summary={midotPowerKids.summary}
-            year={midotPowerKids.year}
-            client={midotPowerKids.client}
-            projectUrl={midotPowerKids.projectUrl}
-            videoUrl={midotPowerKids.videoUrl} />
+            imageSrc={intorahsante.imageSrc}
+            name={intorahsante.name}
+            summary={intorahsante.summary}
+            year={intorahsante.year}
+            client={intorahsante.client}
+            projectUrl={intorahsante.projectUrl}
+            videoUrl={intorahsante.videoUrl} />
+        </li>
+        <li>
+          <ProjectCard
+            imageSrc={nitzaStorytime.imageSrc}
+            name={nitzaStorytime.name}
+            summary={nitzaStorytime.summary}
+            year={nitzaStorytime.year}
+            client={nitzaStorytime.client}
+            projectUrl={nitzaStorytime.projectUrl}
+            videoUrl={nitzaStorytime.videoUrl} />
         </li>
       </ul>
     </div>
@@ -118,33 +138,23 @@ export { getStaticPaths };
       <ul class="projects-cards">
         <li>
           <ProjectCard
-            imageSrc={magicWords.imageSrc}
-            name={magicWords.name}
-            summary={magicWords.summary}
-            year={magicWords.year}
-            client={magicWords.client}
-            projectUrl={magicWords.projectUrl}
-            videoUrl={magicWords.videoUrl} />
+            imageSrc={helloAPI.imageSrc}
+            name={helloAPI.name}
+            summary={helloAPI.summary}
+            year={helloAPI.year}
+            client={helloAPI.client}
+            projectUrl={helloAPI.projectUrl}
+            videoUrl={helloAPI.videoUrl} />
         </li>
         <li>
           <ProjectCard
-            imageSrc={millyCohenTales.imageSrc}
-            name={millyCohenTales.name}
-            summary={millyCohenTales.summary}
-            year={millyCohenTales.year}
-            client={millyCohenTales.client}
-            projectUrl={millyCohenTales.projectUrl}
-            videoUrl={millyCohenTales.videoUrl} />
-        </li>
-        <li>
-          <ProjectCard
-            imageSrc={midotPowerKids.imageSrc}
-            name={midotPowerKids.name}
-            summary={midotPowerKids.summary}
-            year={midotPowerKids.year}
-            client={midotPowerKids.client}
-            projectUrl={midotPowerKids.projectUrl}
-            videoUrl={midotPowerKids.videoUrl} />
+            imageSrc={ixkik.imageSrc}
+            name={ixkik.name}
+            summary={ixkik.summary}
+            year={ixkik.year}
+            client={ixkik.client}
+            projectUrl={ixkik.projectUrl}
+            videoUrl={ixkik.videoUrl} />
         </li>
       </ul>
     </div>
