--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -6,7 +6,6 @@ import { routes } from "../routes";
 import { getLocaleFromUrl } from '../utils/i18n/utils';
 
 const locale = getLocaleFromUrl(Astro.url);
-
 const active = Astro.props.active || 'root';
 
 const activeClass = (item: string): string => {
@@ -14,14 +13,16 @@ const activeClass = (item: string): string => {
 }
 ---
 
-<nav id="nav">
-  <ul>
-    <li id="nav-burger">
-      <button><MenuRoundedIcon /></button>
-    </li>
-    <li id="nav-close">
-      <button><CloseRoundedIcon /></button>
-    </li>
+<nav id="nav" class="nav">
+  <button id="nav-trigger" aria-controls="nav-list">
+    <MenuRoundedIcon />
+  </button>
+
+  <button id="nav-close">
+    <CloseRoundedIcon />
+  </button>
+
+  <ul id="nav-list">
     <li class={`nav-item ${activeClass('root')}`}>
       <a href={routes.root({ locale })}>Inicio</a>
     </li>
