--- a/public/global.css
+++ b/public/global.css
@@ -1018,6 +1018,10 @@ a.btn {
 
 @media only screen and (min-width: 1169px) {
   .project {
+    & .credits {
+      flex-direction: row;
+    }
+
     & .collaborators {
       order: 1;
     }
