--- a/src/pages/[...locale]/portfolio/[slug].astro
+++ b/src/pages/[...locale]/portfolio/[slug].astro
@@ -13,10 +13,9 @@ import { projects } from '../../../utils/content/projects';
 const locale = getLocaleFromUrl(Astro.url);
 const t = useTranslations(locale);
 
-const title = t(`portfolio.project.${slug}.title`);
-const description = t(`portfolio.project.${slug}.description`);
-
 const project: Project = projects[slug]({ locale });
+const title = project.seo.title;
+const description = project.seo.description;
 
 import Layout from "../../../layouts/Layout.astro";
 import Modal from '../../../components/Modal.astro';
@@ -43,22 +42,22 @@ export const getStaticPaths = async () => {
     <ol class="breadcrumb">
       <li>
         <a href={routes.root({ locale })} class="text-subtitle">
-          Inicio
+          {t('breadcrumb.home')}
         </a>
       </li>
       <li>
         <a href={routes.portfolio.root({ locale })} class="text-subtitle">
-          Portafolio
+          {t('breadcrumb.portfolio')}
         </a>
       </li>
       <li>
         {project.section === 'multimedia' &&
           <a href={routes.portfolio.multimedia({ locale })} class="text-subtitle">
-            Multimedia
+            {t('breadcrumb.multimedia')}
           </a>}
         {project.section === 'design' &&
           <a href={routes.portfolio.design({ locale })} class="text-subtitle">
-            Diseño
+            {t('breadcrumb.design')}
           </a>}
       </li>
       <li>
@@ -67,8 +66,8 @@ export const getStaticPaths = async () => {
     </ol>
 
     <div class="title">
-      <p class="text-title text-uppercase">{t(`portfolio.project.${slug}.header.title`)}</p>
-      <h4 class="text-large">{t(`portfolio.project.${slug}.header.subtitle`)}</h4>
+      <p class="text-title text-uppercase">{projects.category}</p>
+      <h4 class="text-large">{projects.name}</h4>
     </div>
 
     <div class="content">
@@ -76,7 +75,7 @@ export const getStaticPaths = async () => {
         <div class="collaborators table">
           <div>
             <span class="table-header text-title text-uppercase">
-              Año
+              {t('portfolio.table-cell.year')}
             </span>
 
             <p class="table-cell">{project.year}</p>
@@ -84,7 +83,7 @@ export const getStaticPaths = async () => {
 
           <div>
             <span class="table-header text-title text-uppercase">
-              Cliente
+              {t('portfolio.table-cell.client')}
             </span>
 
             <p class="table-cell">{project.client}</p>
@@ -93,7 +92,7 @@ export const getStaticPaths = async () => {
           {project.illustration && project.illustration.length > 0 &&
             <div>
               <span class="table-header text-title text-uppercase">
-                Ilustración
+                {t('portfolio.table-cell.illustration')}
               </span>
 
               {project.illustration.length > 1 &&
@@ -108,7 +107,7 @@ export const getStaticPaths = async () => {
           {project.animation && project.animation.length > 0 &&
             <div>
               <span class="table-header text-title text-uppercase">
-                Animación
+                {t('portfolio.table-cell.animation')}
               </span>
 
               {project.animation.length > 1 &&
@@ -123,7 +122,7 @@ export const getStaticPaths = async () => {
           {project.music && project.music.length > 0 &&
             <div>
               <span class="table-header text-title text-uppercase">
-                Música
+                {t('portfolio.table-cell.music')}
               </span>
 
               {project.music.length > 1 &&
@@ -156,7 +155,7 @@ export const getStaticPaths = async () => {
           <p class="text" set:html={project.synopsis}/>
 
           <a href={project.externalLink} class="btn full-width" target="_blank">
-            Ver serie animada →
+            {t('portfolio.external-btn')}
           </a>
         </div>
 
