--- a/public/global.css
+++ b/public/global.css
@@ -918,12 +918,12 @@ a.btn {
   }
 }
 
-/* Show reel */
- iframe.video-thumbnail {
-  aspect-ratio: 16 / 9;
- }
+/* Video Thumbnail */
+iframe.video-thumbnail {
+ aspect-ratio: 16 / 9;
+}
 
- .video-thumbnail {
+.video-thumbnail {
   position: relative;
   display: flex;
   width: 100%;
@@ -950,6 +950,20 @@ a.btn {
       width: calc(var(--rythm) * 15);
       height: calc(var(--rythm) * 15);
     }
+  }
+}
+
+/* Image thumbnail */
+.image-thumbnail {
+  width: 100%;
+  height: 100%;
+  border-radius: var(--border-radius);
+  box-shadow: 0px 4px 0px 0px var(--blue-neon);
+
+  & img {
+    width: 100%;
+    height: 100%;
+    border-radius: var(--border-radius);
   }
 }
 
@@ -1026,7 +1040,7 @@ a.btn {
       order: 1;
     }
 
-    & .video {
+    & .video, & .image {
       min-width: 800px;
       order: 2;
       margin: 0;
