--- a/src/pages/[...locale]/portfolio/[slug].astro
+++ b/src/pages/[...locale]/portfolio/[slug].astro
@@ -135,15 +135,23 @@ export const getStaticPaths = async () => {
             </div>}
         </div>
 
-        <div class="video">
-          <button id="video-player-button" class="video-thumbnail" data-video={project.videoUrl}>
-            <img src={project.imageSrc} />
+        {project.videoUrl.length > 0 &&
+          <div class="video">
+            <button id="video-player-button" class="video-thumbnail" data-video={project.videoUrl}>
+              <img src={project.imageSrc} />
 
-            <div class="overlay video-overlay">
-              <PlayCircleOutlineRoundedIcon />
+              <div class="overlay video-overlay">
+                <PlayCircleOutlineRoundedIcon />
+              </div>
+            </button>
+          </div>}
+
+        {project.videoUrl.length === 0 &&
+          <div class="image">
+            <div class="image-thumbnail">
+              <img src={project.imageSrc} />
             </div>
-          </button>
-        </div>
+          </div>}
       </div>
 
       <div class="description">
