--- a/public/global.css
+++ b/public/global.css
@@ -1241,6 +1241,11 @@ iframe.video-thumbnail {
  * Slider                                                                      |
  * ---------------------------------------------------------------------------*/
 .splide {
+  & img {
+    width: 100%;
+    height: auto;
+  }
+
   & .splide__track {
     border-radius: var(--border-radius-slider);
   }
