--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,6 @@ export interface Props {
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="robots" content="noindex">
 
 		<meta name="color-scheme" content="light">
 		<link rel="stylesheet" href="/splide.min.css">
@@ -31,7 +30,7 @@ export interface Props {
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#4162FF">
 
 		<!-- Slider -->
 		<script is:inline src="/splide.min.js"></script>
