Set all MUI icons as client:only

--- a/src/components/Modal.astro
+++ b/src/components/Modal.astro
@@ -5,7 +5,7 @@ import CloseRoundedIcon from '@mui/icons-material/CloseRounded';
   <div class="modal" role="dialog" aria-labelledby="modal-title" aria-describedby="modal-description">
     <header class="modal-header" id="modal-title">
       <button type="button" class="modal-close" aria-label="Close this modal window">
-        <CloseRoundedIcon />
+        <CloseRoundedIcon client:only />
       </button>
     </header>
 
