--- a/src/pages/[...locale]/index.astro
+++ b/src/pages/[...locale]/index.astro
@@ -105,7 +105,7 @@ export { getStaticPaths };
         <img src="/show-reel/2023-cover.jpg" />
 
         <div class="overlay video-overlay">
-          <PlayCircleOutlineRoundedIcon />
+          <PlayCircleOutlineRoundedIcon client:only />
         </div>
       </button>
     </div>
