--- a/src/pages/[...locale]/portfolio/multimedia/index.astro
+++ b/src/pages/[...locale]/portfolio/multimedia/index.astro
@@ -38,16 +38,16 @@ export { getStaticPaths };
     <ol class="breadcrumb">
       <li>
         <a href={routes.root({ locale })} class="text-subtitle">
-          Inicio
+          {t('breadcrumb.home')}
         </a>
       </li>
       <li>
         <a href={routes.portfolio.root({ locale })} class="text-subtitle">
-          Portafolio
+          {t('breadcrumb.portfolio')}
         </a>
       </li>
       <li>
-        <span>Multimedia</span>
+        <span> {t('breadcrumb.multimedia')}</span>
       </li>
     </ol>
 
