--- a/src/components/Modal.astro
+++ b/src/components/Modal.astro
@@ -1,11 +1,11 @@
 ---
-import CloseRoundedIcon from '@mui/icons-material/CloseRounded';
+import CloseRounded from './icons/CloseRounded.astro';
 ---
 <div id="modal-container" class="none">
   <div class="modal" role="dialog" aria-labelledby="modal-title" aria-describedby="modal-description">
     <header class="modal-header" id="modal-title">
       <button type="button" class="modal-close" aria-label="Close this modal window">
-        <CloseRoundedIcon client:only />
+        <CloseRounded />
       </button>
     </header>
 
