--- a/src/pages/[...locale]/portfolio/[slug].astro
+++ b/src/pages/[...locale]/portfolio/[slug].astro
@@ -1,8 +1,8 @@
 ---
 const { slug } = Astro.params;
 
-import ArrowForwardIosRoundedIcon from '@mui/icons-material/ArrowForwardIosRounded';
-import PlayCircleOutlineRoundedIcon from '@mui/icons-material/PlayCircleOutlineRounded';
+import ArrowForwardIosRounded from '../../../components/icons/ArrowForwardIosRounded.astro';
+import PlayCircleOutlineRounded from '../../../components/icons/PlayCircleOutlineRounded.astro';
 
 import type { GetStaticTypePathsType, Project } from '../../../types';
 import { DEFAULT_LOCALE, LOCALES } from '../../../constants';
@@ -141,7 +141,7 @@ export const getStaticPaths = async () => {
               <img src={project.imageSrc} />
 
               <div class="overlay video-overlay">
-                <PlayCircleOutlineRoundedIcon client:only />
+                <PlayCircleOutlineRounded />
               </div>
             </button>
           </div>}
@@ -182,10 +182,10 @@ export const getStaticPaths = async () => {
 
             <div class="splide__arrows">
               <button class="splide__arrow splide__arrow--prev">
-                <ArrowForwardIosRoundedIcon client:only />
+                <ArrowForwardIosRounded />
               </button>
               <button class="splide__arrow splide__arrow--next">
-                <ArrowForwardIosRoundedIcon client:only />
+                <ArrowForwardIosRounded />
               </button>
             </div>
           </div>}
