Update SEO title at portfolio multimedia and design pages

--- a/src/pages/[...locale]/portfolio/multimedia/index.astro
+++ b/src/pages/[...locale]/portfolio/multimedia/index.astro
@@ -19,8 +19,8 @@ import Modal from '../../../../components/Modal.astro'
 const locale = getLocaleFromUrl(Astro.url);
 const t = useTranslations(locale);
 
-const title = t('portfolio.multimedia.index.title');
-const description = t('portfolio.multimedia.index.description');
+const title = t('portfolio.multimedia.seo.title');
+const description = t('portfolio.multimedia.seo.description');
 
 const magicWords = projectMagicWords({ locale });
 const midotPowerKids = projectMidotPowerKids({ locale });
