--- a/public/global.css
+++ b/public/global.css
@@ -3,32 +3,32 @@
  * ---------------------------------------------------------------------------*/
 @font-face {
   font-family: "Satoshi";
-  src: url('/fonts/Satoshi-Bold.otf');
-  src: url('/fonts/Satoshi-Bold.otf') format('opentype');
+  src: url('fonts/Satoshi-Bold.otf');
+  src: url('fonts/Satoshi-Bold.otf') format('opentype');
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Satoshi";
-  src: url('/fonts/Satoshi-Regular.otf');
-  src: url('/fonts/Satoshi-Regular.otf') format('opentype');
+  src: url('fonts/Satoshi-Regular.otf');
+  src: url('fonts/Satoshi-Regular.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Plus Jakarta Sans";
-  src: url('/fonts/PlusJakartaSans-ExtraBold');
-  src: url('/fonts/PlusJakartaSans-ExtraBold') format('truetype');
+  src: url('fonts/PlusJakartaSans-ExtraBold');
+  src: url('fonts/PlusJakartaSans-ExtraBold') format('truetype');
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Plus Jakarta Sans";
-  src: url('/fonts/PlusJakartaSans-Bold');
-  src: url('/fonts/PlusJakartaSans-Bold') format('truetype');
+  src: url('fonts/PlusJakartaSans-Bold');
+  src: url('fonts/PlusJakartaSans-Bold') format('truetype');
   font-weight: 700;
   font-style: normal;
 }
