--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,6 +32,8 @@ export interface Props {
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#4162FF">
 
+		<link rel="sitemap" href="/sitemap-index.xml" />
+
 		<!-- Slider -->
 		<script is:inline src="/splide.min.js"></script>
 
