--- a/src/pages/[...locale]/contact.astro
+++ b/src/pages/[...locale]/contact.astro
@@ -22,11 +22,11 @@ export { getStaticPaths };
     </div>
     
     <div class="content">
-      <div class="alert alert-success" aria-hidden="true">
+      <div class="alert alert-success" >
         <p set:html={t('contact.alert-success')} />
       </div>
 
-      <div class="alert alert-error" aria-hidden="true">
+      <div class="alert alert-error" >
         <p set:html={t('contact.alert-error')} />
       </div>
 
